<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".App.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40ssp"
            android:text="@string/sign_up_Account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            />
        <FrameLayout
            android:id="@+id/layoutimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>
            <TextView
                android:id="@+id/textimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/text_add_image"
                android:textColor="@color/secondary_text"
                />
        </FrameLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Register_name"
            android:background="@drawable/rim_edit_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPhonetic"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hintAccount"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Register_Email"
            android:background="@drawable/rim_edit_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hintGmail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Register_Phone"
            android:background="@drawable/rim_edit_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hintPhone"
            tools:ignore="TextFields" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Register_Password"
            android:background="@drawable/rim_edit_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/Register_Confirm_Password"
            android:background="@drawable/rim_edit_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/hintPassword_Verify"
            android:inputType="textPassword"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:animateLayoutChanges="true"
            >
            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/Sign_up"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_8sdp"
                android:layout_gravity="center"
                />
            <ProgressBar
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/progressbar"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_sgin_in"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sgin_in"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            />
    </LinearLayout>
</ScrollView>