<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".App.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40ssp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40ssp"
            android:text="@string/sgin_in"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:id="@+id/input_Account"
            android:background="@drawable/rim_edit_text"
            android:hint="@string/hintAccount"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPhonetic"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:id="@+id/input_Password"
            android:background="@drawable/rim_edit_text"
            android:hint="@string/hintPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/_20sdp">
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/sgin_in"
                android:id="@+id/button_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"/>
            <ProgressBar
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/progressbar"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_Create_New_Account"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/textCreateNewAccount"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            />
    </LinearLayout>
</ScrollView>